--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,7 @@
 </div>
 <div class="row">
   <div class="col-md-6">
+    <h1>This is the form</h1>
       <form class="form-inline">
           <div class="form-group mb-2">
             <label for="staticEmail2" class="sr-only"></label>
